# jah

./: .gitignore  .ignore  Atom.cpp  Atom.hpp  Branch.cpp  Branch.hpp  CMakeLists.txt  Ci.cpp  Ci.hpp  Config.cpp  Config.hpp  ConfigManager.cpp  ConfigManager.hpp  Constellation.cpp  Constellation.hpp  Controller.cpp  Controller.hpp  Discussions.cpp  Discussions.hpp  Features.cpp  Features.hpp  Forge.cpp  Forge.hpp  Hook.cpp  Hook.hpp  Hub.hpp  Ji.cpp  Ji.hpp  Model.cpp  Model.hpp  Queue.cpp  README.md  Singularity.cpp  Singularity.hpp  Storage.cpp  Storage.hpp  View.cpp  View.hpp  Workflow.cpp  Workflow.hpp  (+3 more)
.github/workflows/: tests.yml
api/atoms/src/: Atom.cpp  Forge.cpp  Queue.cpp  Singularity.cpp
api/branches/src/: Branches.cpp  Flow.cpp
api/hub/src/: Discussions.cpp  Tickets.cpp
api/wizard/src/: Wizard.cpp
apps/api/atoms/: main.cpp
apps/cli/jah/: main.cpp
apps/gui/atomizer/: atomizer.desktop  main.cpp
apps/gui/atomizer/desktop/: org.jah.atomizer.desktop
apps/gui/atomizer/libs/include/: Atomizer.hpp
apps/gui/atomizer/libs/src/: Atomizer.cpp
apps/gui/atomizer/src/: main.cpp
apps/gui/flow/: flow.desktop  main.cpp
apps/gui/flow/desktop/: org.jah.flow.desktop
apps/gui/flow/libs/include/: Flow.hpp
apps/gui/flow/libs/src/: Flow.cpp
apps/gui/flow/src/: main.cpp
apps/gui/hub/: main.cpp
apps/gui/hub/desktop/: hub.desktop  org.jah.hub.desktop
apps/gui/hub/libs/include/: Hub.hpp
apps/gui/hub/libs/src/: Hub.cpp
apps/gui/hub/src/: main.cpp
apps/gui/ji/: ji.desktop  main.cpp
apps/gui/ji/libs/include/: Ji.hpp
apps/gui/ji/libs/src/: Ji.cpp
apps/gui/ji/src/: main.cpp
libs/jah/include/atoms/: Atom.hpp  Forge.hpp  Queue.hpp  Singularity.hpp
libs/jah/include/branches/: Branches.hpp  Flow.hpp
libs/jah/include/config/: Config.hpp
libs/jah/include/core/: Controller.hpp  Model.hpp  Wizard.hpp
libs/jah/include/hooks/: Ci.hpp
libs/jah/include/hub/: Discussions.hpp  Hub.hpp  Ticket.hpp
libs/jah/src/atoms/: Atom.cpp  Forge.cpp  Queue.cpp  Singularity.cpp
libs/jah/src/branches/: Branches.cpp  Flow.cpp
libs/jah/src/config/: Config.cpp
libs/jah/src/core/: Controller.cpp  Model.cpp  View.cpp  Wizard.cpp
libs/jah/src/hooks/: Ci.cpp  Hook.cpp
libs/jah/src/hub/: Discussions.cpp  Hub.cpp  Ticket.cpp
tests/: AtomTest.cpp  FeaturesTest.cpp  SingularityTest.cpp  ViewTest.cpp
tests/api/hooks/src/: Hooks.cpp
tests/libs/hooks/: HookTest.cpp
